<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="?selectableItemBackground"
        android:clickable="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:text="@string/bir_marta"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?selectableItemBackground"
        android:clickable="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/har_kuni"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?selectableItemBackground"
        android:clickable="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/du_jum"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:background="?selectableItemBackground"
        android:clickable="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/maxsus"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>